[gd_scene load_steps=3 format=3 uid="uid://c2eel4l0hvbna"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_hqtqg"]
[ext_resource type="Texture2D" uid="uid://bahm7hcovlw1g" path="res://icon.svg" id="3_jhnu3"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_hqtqg")
RotationSpd = 1
TimerWaitTime = 0.005
SpawnCount = 10
Radius = 1000

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_jhnu3")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotator" type="Node2D" parent="."]

[node name="CountChangeTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="BulletTimer" type="Timer" parent="."]

[node name="RoundTimer" type="Timer" parent="BulletTimer"]

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="CountChangeTimer" to="." method="_on_count_change_timer_timeout"]
